# pyspark_practice

./: CHAT_Z_AI generated scenarios part 2.md  CHAT_Z_AI generated scenarios.md  CHAT_Z_AI generated scenarios_test.md  Question52.ipynb  all_cpp_files.txt  create_and_upload_question_notebook.md  duckdb_all_cpp_files.txt  existing_md_files.txt  generate_notebooks.py  generate_notebooks_q1_50.py  qualify.md  sql_window_functions_reference.md  test_write.md
.claude/: settings.local.json
docs/: snowflake-services-overview.md
duckdb_src_analysis/: catalog__catalog.cpp.md  catalog__catalog__.cpp.md  catalog__catalog_entry.cpp.md  catalog__catalog_entry_retriever.cpp.md  catalog__catalog_search_path.cpp.md  catalog__catalog_set.cpp.md  catalog__catalog_transaction.cpp.md  catalog__default__default_functions.cpp.md  catalog__default__default_generator.cpp.md  catalog__default__default_schemas.cpp.md  catalog__default__default_table_functions.cpp.md  catalog__default__default_types.cpp.md  catalog__default__default_views.cpp.md  catalog__dependency_catalog_set.cpp.md  catalog__dependency_list.cpp.md  catalog__dependency_manager.cpp.md  catalog__duck_catalog.cpp.md  catalog__entry_lookup_info.cpp.md  catalog__similar_catalog_entry.cpp.md  catalog_entry__aggregate_function_catalog_entry.cpp.md  catalog_entry__column_dependency_manager.cpp.md  catalog_entry__copy_function_catalog_entry.cpp.md  catalog_entry__dependency__dependency_dependent_entry.cpp.md  catalog_entry__dependency__dependency_entry.cpp.md  catalog_entry__dependency__dependency_subject_entry.cpp.md  catalog_entry__duck_index_entry.cpp.md  catalog_entry__duck_schema_entry.cpp.md  catalog_entry__duck_table_entry.cpp.md  catalog_entry__index_catalog_entry.cpp.md  catalog_entry__macro_catalog_entry.cpp.md  catalog_entry__pragma_function_catalog_entry.cpp.md  catalog_entry__scalar_function_catalog_entry.cpp.md  catalog_entry__schema_catalog_entry.cpp.md  catalog_entry__sequence_catalog_entry.cpp.md  catalog_entry__table_catalog_entry.cpp.md  catalog_entry__table_function_catalog_entry.cpp.md  catalog_entry__type_catalog_entry.cpp.md  catalog_entry__view_catalog_entry.cpp.md
notebooks/: Question_100.ipynb  Question_100_solution.ipynb  Question_53.ipynb  Question_53_solution.ipynb  Question_54.ipynb  Question_54_solution.ipynb  Question_55.ipynb  Question_55_solution.ipynb  Question_56.ipynb  Question_56_solution.ipynb  Question_57.ipynb  Question_57_solution.ipynb  Question_58.ipynb  Question_58_solution.ipynb  Question_59.ipynb  Question_59_solution.ipynb  Question_60.ipynb  Question_60_solution.ipynb  Question_61.ipynb  Question_61_solution.ipynb  Question_62.ipynb  Question_62_solution.ipynb  Question_63.ipynb  Question_63_solution.ipynb  Question_64.ipynb  Question_64_solution.ipynb  Question_65.ipynb  (+69 more)
sql_practice_local/cplusplus/: BUILD_GUIDE.md  BUILD_LINUX.md  BUILD_SESSION_20250206.md  BUILD_TEST_CONTEXT_.md  BUILD_TEST_CONTEXT_20260206_175007.md  BUILD_TEST_CONTEXT_20260206_175008.md  CMakeLists.txt  INSTALL_CLANG_WINDOWS.md  PROJECT_STATUS.md  README.md  TEST_CASES.md  VAGRANT_GUIDE.md  Vagrantfile  build.bat  debug_query2.sh  debug_test.sh  duckdb.hpp  duckdb.lib  load_test.sh  test_query.sh  vagrant-setup.sh
sql_practice_local/cplusplus/.vagrant/machines/default/virtualbox/: action_cloud_init  action_provision  action_set_name  index_uuid  private_key  synced_folders  vagrant_cwd
sql_practice_local/cplusplus/docker/: BUILD_PROCESS.md  Dockerfile  docker-compose.yml
sql_practice_local/cplusplus/gitlabce_devops/: DEVOPS_GUIDE.md  README.md  Vagrantfile  devops-setup.sh  gitlab.rb
sql_practice_local/cplusplus/gitlabce_devops/.vagrant/machines/default/virtualbox/: action_cloud_init  action_provision  action_set_name  index_uuid  private_key  synced_folders  vagrant_cwd
sql_practice_local/cplusplus/load_tester/: CMakeLists.txt  README.md  Vagrantfile  bottleneck_analysis.sh  debug_grading.ps1  debug_result.ps1  debug_single.ps1  detailed_incremental_test.sh  incremental_test.sh  load_test.ps1  load_test_500.sh  load_test_monitored.sh  metrics_during_test.sh  monitor_simple.sh  percentile_test.sh  resource_monitor.sh  run_dual_test.sh  run_test_server1.sh  run_test_server2.sh  server_monitor.sh  server_monitor_v2.sh  test_fix.ps1  test_flow.ps1  test_fresh.ps1  test_login.ps1  test_login2.ps1  test_login3.ps1  test_login4.ps1  test_login5.ps1  test_raw.ps1  wrk_10k_test.sh  wrk_sql_test.lua  wrk_test.lua
sql_practice_local/cplusplus/load_tester/.vagrant/machines/default/virtualbox/: action_provision  action_set_name  id  index_uuid  private_key  vagrant_cwd
sql_practice_local/cplusplus/load_tester/src/: load_tester.cpp  load_tester.hpp  main.cpp
sql_practice_local/cplusplus/src/: main.cpp
sql_practice_local/cplusplus/src/core/: config.cpp  duckdb_instance_manager.cpp  duckdb_instance_manager.cpp.md  session_manager.cpp
sql_practice_local/cplusplus/src/db/: duckdb_executor.cpp  duckdb_executor.cpp.md  embedded_questions.cpp  embedded_questions.cpp.md  embedded_questions.hpp  embedded_questions.hpp.md  question_loader.cpp  question_loader.cpp.md  test.md
sql_practice_local/cplusplus/src/http/: handlers.cpp  http_server.cpp
sql_practice_local/cplusplus/src/include/: config.hpp  duckdb_instance_manager.hpp  duckdb_instance_manager.hpp.md  http_server.hpp  question_loader.hpp  question_loader.hpp.md  session_manager.hpp  sql_executor.hpp  sql_executor.hpp.md
sql_practice_local/cplusplus/web/: app.js  index.html  styles.css
(+181 files in other folders)
